==> erictissotdupont/WinCNC/ESP32_Motor/main/Motor.cpp <==
  #include <stdlib.h>
  #include <cstring>
  #include "freertos/FreeRTOS.h"
  #include "driver/gpio.h"
  #include "driver/gptimer.h"
  #include "esp_log.h"
  #include "CNC.h"
#define STEP_PULSE_US 100 // Duration of the motor step pulse
#define RAMP_SHIFT    19 // 19=524ms
#define RAMP_TIME     (1L << RAMP_SHIFT)
#define MIN_SPEED     15L
#define MAX_SPEED     150L
#define STEP_FROM_RAMP( Min, Max, t ) ( Min - ((( Min - Max ) * t ) >> RAMP_SHIFT))
#define SPEED_TO_STEP( sbi, s ) ( 60000000L / ((sbi) * (s)))
#define NO_STEP_TIME  (-1ULL)
#define OUTPUT 0
#define LOW 0
#define HIGH 1

void Motor::SetDirection( int d )
{
  if( !reverseDir )
  {
    gpio_set_level( dirPin, d < 0 ? LOW : HIGH );
    //digitalWrite( dirPin, d < 0 ? LOW : HIGH );
  }
  else
  {
    gpio_set_level( dirPin, d < 0 ? HIGH : LOW );
    //digitalWrite( dirPin, d < 0 ? HIGH : LOW );
  }
  
  if( curDir != d )
  {
    curDir = d;
  }
}

void DualMotor::SetDirection( int d )
{
  if( !reverseDir )
  {
    gpio_set_level( dirPin2, d < 0 ? LOW : HIGH );
    //digitalWrite( dirPin2, d < 0 ? LOW : HIGH );
  }
  else
  {
    gpio_set_level( dirPin2, d < 0 ? HIGH : LOW );
    //digitalWrite( dirPin2, d < 0 ? HIGH : LOW );
  }
  Motor::SetDirection( d );
}

uint64_t Motor::InitMove( long s, unsigned long t, uint64_t now )
{
  int d = 1;
  
  if( stepLevel == HIGH )
  {
    ESP_LOGE( TAG, "Previous move did not clear the pulse" );
    assert(false);
  }

/*
  if( s == 0 && manual )
  {
    if( manual > -100 && manual < 100 )
    {
      unsigned long now = micros( );
      if( now > nextSlowStep )
      {
        nextSlowStep = now + 100000;
        accManual += manual;
        if( accManual < -100 || accManual > 100 )
        {
          if( accManual < 0 ) s = -1; else s = 1;
          accManual = 0;
        }
      }
    }
    else
    {
      if( manual > 0 ) s = ( manual - 100 ); else s = manual + 100;
    }
    t = 100000;
  }
*/  
  // Backward direction
  if( s < 0 ) 
  { 
    d = -1;
    s = -s; 
  }

  // If we do not return "NO_STEP_TIME" the move will
  // occur no matter what.
  
  moveLength = s;
  moveDuration = t;
  nextStepTime = 0;
  
  if( s > 0 )
  {
    SetDirection( d );
    // Linear motion (G1)
    if( moveDuration )
    {
      // Calculate the step duration in uS with 32:32bit precision
      stepDuration = t / moveLength;
      stepModulo = t % moveLength;
      stepAcc = 0;
    }
    // Rapid positionning (G0)
    else
    {
      stepDuration = minSpeedStep;
      decelDist = moveLength;
      decelStart = 0;
    }
    moveStep = 1;
  }
  else 
  {
    moveStep = 0;
    nextStepTime = NO_STEP_TIME;
    return NO_STEP_TIME;
  }
  
  nextStepTime = stepDuration + now;
  return stepDuration;
}

void Motor::PrepareNextStep( uint64_t now )
{
  if( stepLevel == HIGH )
  {
    nextStepTime += STEP_PULSE_US;
  }
  else
  {
    // Move is complete.
    if( moveStep >= moveLength )
    {
      moveStep = 0;
      nextStepTime = NO_STEP_TIME;
    }
    // Movement with duration means linear motion (G1).
    else if( moveDuration != 0 )
    {      
      nextStepTime += stepDuration - STEP_PULSE_US;
      stepAcc += stepModulo;
      if( stepAcc >= moveLength )
      {
        stepAcc -= moveLength;
        nextStepTime++;
      }
      moveStep++;
    }
    // Zero duration means rapid positioning motion (G0).
    else
    {      
      uint64_t t = now - g_MoveStart;
      // Deceleration phase. Checking for deceleration first handles
      // the case where the G0 movement is so short that there is not
      // enough distance to reach full speed. As the acceleration phase
      // increases the decelDistance, this deceleration will take over
      // when the movement reaches mid point.
      if( moveStep >= decelDist )
      {
        if( decelStart == 0 )
        {
          // Capture the time when the deceleration started
          decelStart = t;
        }
        // Time spent decelerating 
        t = t - decelStart;
        if( t < decelTime )
        {
          // Expected time decelerating
          t = decelTime - t;
        }
        else
        {
          t = 0;
        }
        stepDuration = STEP_FROM_RAMP( minSpeedStep, maxSpeedStep, t );
      }
      // Acceleration phase
      else if( t <= RAMP_TIME )
      {
        stepDuration = STEP_FROM_RAMP( minSpeedStep, maxSpeedStep, t );
        
        // Save the distance and time when deceleration should end
        // If the movement is so short that full speed can't be
        // reached, the previous test will pass and deceleration
        // will start before the movement has reached full speed.
        decelDist = moveLength - moveStep;
        decelTime = t;
      }
      // In the constant speed phase, just update the time for the
      // next half step.
      nextStepTime += stepDuration - STEP_PULSE_US;
      moveStep++;
    }
  }
}

void IRAM_ATTR Motor::Step( )
{
  if( stepLevel == LOW )
  {
    gpio_set_level( stepPin, HIGH );
    stepLevel = HIGH;
    curPos += curDir;
  }
  else
  {
    gpio_set_level( stepPin, LOW );
    stepLevel = LOW;
  }
}

void IRAM_ATTR DualMotor::Step( )
{
  Motor::Step( );
  gpio_set_level( stepPin2, stepLevel );
}

  static void IRAM_ATTR PrepareNextStep( uint64_t now )
  {
    // Check which axis is the next one to be stepped
    if(( X.GetNextStepTime( ) < Y.GetNextStepTime( )) && ( X.GetNextStepTime( ) < Z.GetNextStepTime( )))
    {
      g_pNextMotorToStep = &X;
    }
    else if( Y.GetNextStepTime( ) < Z.GetNextStepTime( ))
    {
      g_pNextMotorToStep = &Y;
    }
    else if( Z.GetNextStepTime( ) != NO_STEP_TIME )
    {
      g_pNextMotorToStep = &Z;
    }
    else
    {
      cmd_t cmd;
      BaseType_t xTaskWokenByReceive = pdFALSE;
      
      // If this was called from idle, there has to be a movement to make
      assert( now != 0 );

      // Pull next move command from the queue
      if( xQueueReceiveFromISR( g_cmd_queue, &cmd, &xTaskWokenByReceive ))
      {
        // Start the next move using the curent time as the starting point (now)
        g_MoveStart = now;
        X.InitMove( cmd.dx, cmd.duration, now );
        Y.InitMove( cmd.dy, cmd.duration, now );
        Z.InitMove( cmd.dz, cmd.duration, now );
        PrepareNextStep( now );
      }
      else
      {
        // No more movements to perform, stop the timer, reset
        // the counter and go idle    
        ESP_ERROR_CHECK(gptimer_stop(g_motorTimer));
        ESP_ERROR_CHECK(gptimer_set_raw_count(g_motorTimer,0));
        g_pNextMotorToStep = NULL;
        SignalMotorIdleFromISR( );
      }
    }

    if( g_pNextMotorToStep )
    {
      gptimer_alarm_config_t alarm_config1 = {
        .alarm_count = g_pNextMotorToStep->GetNextStepTime( ),
        .reload_count = 0,
        .flags = 0,
      };

      gptimer_set_alarm_action(g_motorTimer, &alarm_config1);

      // If this was started from idle,
      if( now == 0 )
      {
        ESP_ERROR_CHECK(gptimer_start(g_motorTimer));
      }
    }
  }

  void MotorMove( long x, long y, long z, long d )
  { 
    g_MoveStart = 0;

    // This calculates the interval between steps for each axis and returns the time
    // to the first step needs to occur ( NO_STEP_TIME if no move necessary).
    X.InitMove( x, d, 0 );
    Y.InitMove( y, d, 0 );
    Z.InitMove( z, d, 0 );
    
    PrepareNextStep( 0 );
    
    WaitForMotorIdle( );
       
       
   /*
    // No movement means dwell (GCode "P")
    if( x==0 && y==0 && z==0 )
    {
      if( d != 0 )
      {
        while( g_MoveStart + d >= micros( ))
        {
          UART_Task( );
        }     
        
        // Just wait...
        //WaitTillItsTime( d );
        g_MoveStart += d;
      }
      return;
    }

    //Serial.printf("Start Move %ld,%ld,%ld\n", x,y,z );

    do
    {

    } while( 1 );

    if( d != 0 )
    {
      g_MoveStart += d;
    }
    else
    {
      g_MoveStart = 0;
    }
    */
  }
