==> erictissotdupont/WinCNC/Arduino/ATMega32u4/motor.cpp <==
#include "CNC.h"
#include "helper.h"
#include "motor.h"
#include "LCD.h"
#include "UART.h"
#define RAMP_SHIFT    19 // 19=524ms
#define RAMP_TIME     (1L << RAMP_SHIFT)
#define MIN_SPEED     15L
#define MAX_SPEED     250L
#define STEP_FROM_RAMP( Min, Max, t ) ( Min - ((( Min - Max ) * t ) >> RAMP_SHIFT))
#define SPEED_TO_STEP( sbi, s ) ( 60000000L / ( sbi * s ))
#define NO_STEP_TIME  0xFFFFFFFF

void Motor::SetDirection( int d )
{
  if( !reverseDir )
  {
    digitalWrite( dirPin, d < 0 ? LOW : HIGH );
  }
  else
  {
    digitalWrite( dirPin, d < 0 ? HIGH : LOW );
  }
  
  if( curDir != d )
  {
    curDir = d;
    // Give some time for the controller to capture the new
    // direction pin level. Otherwise the next move may
    // step in the wrong direction for its first steps.
    delayMicroseconds( 100 );
  }
}

void DualMotor::SetDirection( int d )
{
  if( !reverseDir )
  {
    digitalWrite( dirPin2, d < 0 ? LOW : HIGH );
  }
  else
  {
    digitalWrite( dirPin2, d < 0 ? HIGH : LOW );
  }
  Motor::SetDirection( d );
}

unsigned long Motor::InitMove( long s, long t )
{
  long ret = -1;
  int d = 1;

  // The previous move might have left this pin HIGH
  *stepClrReg = stepPinMask;
  //digitalWrite( stepPin, LOW );
  
  // Backward direction
  if( s < 0 ) 
  { 
    d = -1;
    s = -s; 
  }

  // If we do not return "NO_STEP_TIME" the move will
  // occur no matter what.
  
  moveLength = s;
  moveDuration = t;
  nextStepTime = 0;
  
  if( s > 0 )
  {
    SetDirection( d );
    // Linear motion (G1)
    if( moveDuration )
    {
      // Calculate the step duration in uS with 32:32bit precision
      stepDuration = t / moveLength;
      stepModulo = t % moveLength;
      stepAcc = 0;
    }
    // Rapid positionning (G0)
    else
    {
      stepDuration = minSpeedStep;
      decelDist = moveLength;
      decelStart = 0;
    }
    moveStep = 1;
  }
  else 
  {
    moveStep = 0;
    return NO_STEP_TIME;
  }
  currentStepTime = stepDuration;
  return stepDuration;
}

void Motor::PrepareNextStep( )
{
  // Have we prepared yet?
  if( nextStepTime == 0 )
  {        
    // Move is complete.
    if( moveStep >= moveLength )
    {
      curPos =  curPos + ( curDir * moveStep );
      moveStep = 0;
      nextStepTime = NO_STEP_TIME;
    }
    // Movement with duration means linear motion (G1).
    else if( moveDuration != 0 )
    {      
      stepAcc += stepModulo;
      if( stepAcc >= moveLength )
      {
        stepAcc -= moveLength;
        nextStepTime++;
      }
      nextStepTime = currentStepTime + stepDuration;
      currentStepTime = nextStepTime;
      moveStep++;
    }
    // Zero duration means rapid positioning motion (G0).
    else
    {
      // Time since movement started
      long t = timeSinceMoveStarted( );
      
      // Deceleration phase. Checking for deceleration first handles
      // the case where the G0 movement is so short that there is not
      // enough distance to reach full speed. As the acceleration phase
      // increases the decelDistance, this deceleration will take over
      // when the movement reaches mid point.
      if( moveStep >= decelDist )
      {
        if( decelStart == 0 )
        {
          // Capture the time when the deceleration started
          decelStart = t;
        }
        // Time spent decelerating 
        t = t - decelStart;
        if( t < decelTime )
        {
          // Expected time decelerating
          t = decelTime - t;
        }
        else
        {
          t = 0;
        }
        stepDuration = STEP_FROM_RAMP( minSpeedStep, maxSpeedStep, t );
      }
      // Acceleration phase
      else if( t <= RAMP_TIME )
      {
        stepDuration = STEP_FROM_RAMP( minSpeedStep, maxSpeedStep, t );
        
        // Save the distance and time when deceleration should end
        // If the movement is so short that full speed can't be
        // reached, the previous test will pass and deceleration
        // will start before the movement has reached full speed.
        decelDist = moveLength - moveStep;
        decelTime = t;
      }
      // In the constant speed phase, just update the time for the
      // next half step.
      nextStepTime = currentStepTime + stepDuration;
      currentStepTime = nextStepTime;
      moveStep++;
    }

    // Clear the signal last to get the longest HIGH pulse possible
    // TB6600HG datasheet requires minimum CLK pulse width of 2.2uS
    // Withe the current code running on SAMD21, this pulse is 5uS.
    *stepClrReg = stepPinMask;
  }
}

void DualMotor::PrepareNextStep( )
{
  // Have we prepared yet?
  if( nextStepTime == 0 )
  {
    Motor::PrepareNextStep( );
    // Clear the pin last to make sure the pulse lasts for
    // at least 
    *step2ClrReg = step2PinMask;    
  }
}

void Motor::Step( unsigned long& t )
{
#ifdef MEASURE_MOVE
  long s = t - timeSinceMoveStarted( );
#endif

  //digitalWrite( stepPin, HIGH );
  *stepSetReg = stepPinMask;

  // Interrupts get disabled when returning from WaitTillItsTime( )
  // Turn them back ON now that we're out of the time critical section.
  interrupts( );
   
  // In some rare occasions (when all axis had to pulse with less than 30uS
  // in between steps), this didn't give enough time to prepare the next step.
  if( nextStepTime == 0 )
  {
    PrepareNextStep( );
  }
  // Return the next step time...
  t = nextStepTime;
  // ... and clear the time so that it will be "prepared" as soon as there is time
  nextStepTime = 0;

#ifdef MEASURE_MOVE
  if( s < maxLateTime ) maxLateTime = s;
  if( s > maxEarlyTime ) maxEarlyTime = s;
  avgStepTime += s;
  avgStepCounter++;
#endif
}

void DualMotor::Step( unsigned long& t )
{
  //digitalWrite( stepPin2, HIGH );
  *step2SetReg = step2PinMask;
  Motor::Step( t );
}

void Motor_Move( long x, long y, long z, long d )
{
  unsigned long tX,tY,tZ;
  
  // If in error state, dot not move
  if( g_error != 0 )
  {
    return;
  }

  // Capture when the motion started (in uS). Do this as early as possible
  // to avoid jitter in consecutive linear motion
  g_MoveStart = micros();

#ifdef MEASURE_MOVE
  maxLateTime = 0;
  maxEarlyTime = 0;
  avgStepTime = 0;
  avgStepCounter = 0;
#endif
  
  // No movement means dwell (GCode "P")
  if( x==0 && y==0 && z==0 )
  {
    // Just wait...
    WaitTillItsTime( d );
    return;
  }

  // This calculates the interval between steps for each axis and returns the time
  // to the first step needs to occur ( NO_STEP_TIME if no move necessary).
  tX = X.InitMove( x, d );
  tY = Y.InitMove( y, d );
  tZ = Z.InitMove( z, d );

  do
  {
    // Check which axis is the next one to be stepped
    if(( tX < tY ) && ( tX < tZ ))
    {
      // X is next step
      WaitTillItsTime( tX );
      X.Step( tX );
    }
    else if( tY < tZ )
    {
      // Y is next step
      WaitTillItsTime( tY );
      Y.Step( tY );
    }
    else if( tZ != NO_STEP_TIME )
    {
      // Z is next step
      WaitTillItsTime( tZ );
      Z.Step( tZ );
    }
    else
    {
      // No more steps, move is done.
      break;
    }
  } while( 1 );
  
#ifdef MEASURE_MOVE
  char str[10];
  sprintf( str, "%d %d %d ", maxLateTime, maxEarlyTime, avgStepTime / avgStepCounter );
  LCD_SetStatus( str, 0 );
#endif

}
